[iOS] ASSERTION FAILED: !(_keyboardFlags & WebEventKeyboardInputModifierFlagsChanged) in -[WebEvent charactersIgnoringModifiers] when pressing modifier on PDF https://bugs.webkit.org/show_bug.cgi?id=211472

Reviewed by Darin Adler.

Source/WebKit:

Do not ask for event character string for a flags changed event: they don't have one.

Test: fast/events/ios/pdf-modifer-key-down-crash.html

* UIProcess/ios/WKKeyboardScrollingAnimator.mm:
(-[WKKeyboardScrollingAnimator keyboardScrollForEvent:]):

LayoutTests:

Add a test.

* fast/events/ios/pdf-modifer-key-down-crash-expected.txt: Added.
* fast/events/ios/pdf-modifer-key-down-crash.html: Added.

Canonical link: https://commits.webkit.org/224413@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261240 268f45cc-cd09-0410-ab3c-d52691b4dbfc